# tic_tac_toe

./: .coverage  README.md  pyproject.toml  settings.py  setup.cfg  utils.py
tests/: test_check_win.py  test_computer_step.py
tic_tac_toe/: main.py  settings.py  utils.py
